boreal/tests/assets/invalid_files/compilation/valid.yar
// [skip]
// This file is used to be included by others, without this include causing errors.
// It is skipped when iterating on all files since it does not cause any errors
// when compiled.
rule b {
    condition: true
}
